# gearsvk

./: .gitignore  .gitmodules  build-resource.sh  build.gradle  build.sh  profile  profile.android  profile.sdl  readme.md  uninstall.sh
app/: build.gradle
app/src/androidTest/java/com/jeffboody/gearsvk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: resource.bfs  resource.pak
app/src/main/assets/shaders/: frag.spv  vert.spv
app/src/main/cpp/: CMakeLists.txt  Makefile  a3d_log.c  a3d_log.h  a3d_math.c  a3d_math.h  android_main.c  gear.c  gear.h  gears_glsm.c  gears_glsm.h  gears_layerHud.c  gears_layerHud.h  gears_overlay.c  gears_overlay.h  gears_renderer.c  gears_renderer.h  gears_viewAbout.c  gears_viewAbout.h  gearsvk.c  native-lib.cpp  sdl.cfg  sdl_main.c  vk_engine.c  vk_engine.h
app/src/main/java/com/jeffboody/gearsvk/: GearsVK.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/jeffboody/gearsvk/: ExampleUnitTest.java
docs/: ch1-overview-of-vulkan.dot  ch2-memory-and-references.dot  ch3-queues-and-commands.dot  ch4-moving-data.dot  ch5-presentation.dot  ch6-shaders-and-pipelines.dot  ch7-graphics-pipelines.dot  ch8-drawing.dot  sdl-vulkan.dot
gradle/wrapper/: gradle-wrapper.properties
resource/: gen_shader.frag  gen_shader.vert  readme.txt
resource/shaders/: draw.vert  scaler.frag  scaler.vert  shader.frag
shaders/: build-shaders.sh  shader.frag  shader.vert
